# scu

./: README.md  pyproject.toml  requirements.md
docs/: architecture.md  implementation-plan.md
src/scu/: __init__.py  config.py  duplicates.py  events.py  interfaces.py  output.py  pipeline.py  session.py
src/scu/gui/: __init__.py  main.py
src/scu/platform/: __init__.py  windows.py
src/scu/tools/: __init__.py  build_exe.py
tests/: test_build_exe.py  test_config.py  test_output.py  test_output_writer.py  test_pipeline.py  test_session.py  test_windows_platform.py
