[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scu"
version = "0.1.0"
description = "Multi-monitor screenshot and arrow key automation utility (core library)"
authors = [{name = "SCU Developers"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
]
gui = [
    "PySide6>=6.6.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
scu-gui = "scu.gui.main:main"
scu-build-exe = "scu.tools.build_exe:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
